- added Feed and FeedsModel - updated controllers - updated storyboard

--- a/ChessNews/Base.lproj/Main.storyboard
+++ b/ChessNews/Base.lproj/Main.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="rxd-b4-ykf">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--Feed Table View Controller-->
@@ -45,35 +46,68 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Fetch latest news from:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cVa-4Z-jv6">
-                                <rect key="frame" x="65" y="140" width="179" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Chess news sources:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dzq-h0-9a1">
+                                <rect key="frame" x="51" y="110" width="207" height="21"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WKc-Sp-0rV">
-                                <rect key="frame" x="106" y="238" width="42" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a0I-qk-Caz">
-                                <rect key="frame" x="106" y="267" width="42" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="klQ-H9-FRh">
-                                <rect key="frame" x="106" y="204" width="42" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="Wgw-yk-Di6">
+                                <rect key="frame" x="51" y="147" width="74" height="81"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lVC-ER-KE6">
+                                        <rect key="frame" x="0.0" y="0.0" width="74" height="51"/>
+                                        <state key="normal" title="Chessdom"/>
+                                        <connections>
+                                            <action selector="choose:" destination="81h-Ge-9in" eventType="touchUpInside" id="FoX-N2-X5V"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AiX-zL-1mp">
+                                        <rect key="frame" x="0.0" y="51" width="45" height="30"/>
+                                        <state key="normal" title="Reddit"/>
+                                        <connections>
+                                            <action selector="choose:" destination="81h-Ge-9in" eventType="touchUpInside" id="uSk-oN-VeN"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="lVC-ER-KE6" firstAttribute="leading" secondItem="AiX-zL-1mp" secondAttribute="leading" id="3II-CG-DIO"/>
+                                    <constraint firstItem="AiX-zL-1mp" firstAttribute="leading" secondItem="Wgw-yk-Di6" secondAttribute="leading" id="CPx-4Z-MJy"/>
+                                    <constraint firstItem="AiX-zL-1mp" firstAttribute="top" secondItem="lVC-ER-KE6" secondAttribute="bottom" id="Dke-o2-sBG"/>
+                                    <constraint firstItem="lVC-ER-KE6" firstAttribute="leading" secondItem="Wgw-yk-Di6" secondAttribute="leading" id="JGc-3C-pH0"/>
+                                    <constraint firstItem="lVC-ER-KE6" firstAttribute="leading" secondItem="Wgw-yk-Di6" secondAttribute="leading" id="MEU-Wp-C2I"/>
+                                    <constraint firstAttribute="bottom" secondItem="AiX-zL-1mp" secondAttribute="bottom" id="NW4-gH-FZi"/>
+                                    <constraint firstAttribute="bottom" secondItem="AiX-zL-1mp" secondAttribute="bottom" id="Nf8-YL-Zqj"/>
+                                    <constraint firstItem="AiX-zL-1mp" firstAttribute="leading" secondItem="Wgw-yk-Di6" secondAttribute="leadingMargin" id="c8e-cw-cnX"/>
+                                    <constraint firstItem="lVC-ER-KE6" firstAttribute="leading" secondItem="Wgw-yk-Di6" secondAttribute="leading" id="caK-Wj-fLn"/>
+                                    <constraint firstItem="lVC-ER-KE6" firstAttribute="leading" secondItem="Wgw-yk-Di6" secondAttribute="leadingMargin" id="dDW-Nl-z1i"/>
+                                    <constraint firstItem="lVC-ER-KE6" firstAttribute="top" secondItem="Wgw-yk-Di6" secondAttribute="top" constant="21" id="eKg-2c-V48"/>
+                                    <constraint firstItem="AiX-zL-1mp" firstAttribute="leading" secondItem="Wgw-yk-Di6" secondAttribute="leading" id="gpd-z0-CO3"/>
+                                    <constraint firstItem="lVC-ER-KE6" firstAttribute="top" secondItem="Wgw-yk-Di6" secondAttribute="top" constant="21" id="h3i-wL-OSX"/>
+                                    <constraint firstItem="AiX-zL-1mp" firstAttribute="top" secondItem="Wgw-yk-Di6" secondAttribute="top" constant="51" id="hQi-cY-9NA"/>
+                                    <constraint firstItem="lVC-ER-KE6" firstAttribute="leading" secondItem="Wgw-yk-Di6" secondAttribute="leading" id="klA-So-TFD"/>
+                                    <constraint firstAttribute="bottom" secondItem="AiX-zL-1mp" secondAttribute="bottom" id="nVP-nF-hJ9"/>
+                                    <constraint firstItem="AiX-zL-1mp" firstAttribute="bottom" secondItem="Wgw-yk-Di6" secondAttribute="bottomMargin" id="ncK-pa-LbX"/>
+                                    <constraint firstItem="AiX-zL-1mp" firstAttribute="leading" secondItem="Wgw-yk-Di6" secondAttribute="leading" id="pb4-Tf-4RB"/>
+                                    <constraint firstItem="AiX-zL-1mp" firstAttribute="leading" secondItem="Wgw-yk-Di6" secondAttribute="leading" id="sWx-ad-2Xg"/>
+                                </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="eKg-2c-V48"/>
+                                        <exclude reference="h3i-wL-OSX"/>
+                                    </mask>
+                                </variation>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Wgw-yk-Di6" firstAttribute="top" secondItem="Z63-yp-gKw" secondAttribute="bottom" constant="83" id="4TN-Pb-aGL"/>
+                            <constraint firstItem="Wgw-yk-Di6" firstAttribute="leading" secondItem="hbS-Nk-7ED" secondAttribute="leadingMargin" constant="31" id="fwb-JS-jpv"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Chess news" id="295-Qn-YgY"/>
                     <connections>
+                        <outlet property="feedsStack" destination="Wgw-yk-Di6" id="zBL-nQ-sWx"/>
                         <segue destination="4td-1Z-LCQ" kind="show" identifier="choose" id="7Y0-zf-RDk"/>
                     </connections>
                 </viewController>
